minor updates, travis_dev

--- a/workflows/deg_multi_run/nextflow.config
+++ b/workflows/deg_multi_run/nextflow.config
@@ -3,7 +3,7 @@ Developer temporary config.
 **/
 params.annotated_gem_path = '/home/tyler/GSForge_demo_data/osfstorage/rice.nc'
 params.formula_design = '~ Treatment'
-params.formula_variables = ["Treatment"]
+params.formula_variables = "['Treatment']"
 // params.contrast_arrays = '/home/tyler/GSForge_demo_data/osfstorage/rice.nc'
 
 
