--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.3'
 
 services:
   interactive:
-    image: systemsgenetics/gsforge_interactive:${IMAGE_TAG}
+    image: systemsgenetics/gsforge_interactive:${GSFORGE_IMAGE_TAG:-dev}
     build:
       context: .
       dockerfile: './docker/notebook/Dockerfile'
 
-  workflow:
-    image: systemsgenetics/gsforge_workflow:${IMAGE_TAG}
-    build:
-      context: .
-      dockerfile: './docker/workflow/Dockerfile'
+#  workflow:
+#    image: systemsgenetics/gsforge_workflow:${GSFORGE_IMAGE_TAG:-dev}
+#    build:
+#      context: .
+#      dockerfile: './docker/workflow/Dockerfile'
