--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
-name: GSForge
+name: GSForge_Py38
 channels:
   - conda-forge
 dependencies:
-  - python=3.7
+  - python=3.8
   - boruta_py
   - bokeh
   - click
@@ -24,5 +24,4 @@ dependencies:
   - umap-learn
   - pip
   - pip:
-      - methodtools
       - git+https://github.com/SystemsGenetics/GSForge
