added back travis skip_cleanup, not depreciated all the way? travis_dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ jobs:
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
+          skip_cleanup: true
           local_dir: ./builtdocs
           target_branch: gh-pages
           github_token: $GITHUB_TOKEN
@@ -73,6 +74,7 @@ jobs:
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
+          skip_cleanup: true
           local_dir: ./builtdocs
           target_branch: gh-pages
           github_token: $GITHUB_TOKEN
