--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ python:
 
 stages:
   - name: website_dev
-    if: (tag =~ ^v(\d+|\.)+[a-z]+\d+$) OR (commit_message =~ travis_dev)
+    if: (tag =~ ^v(\d+|\.)+[a-z]+\d*$) OR (commit_message =~ travis_dev)
   - name: pip_dev_package
-    if: (tag =~ ^v(\d+|\.)+[a-z]+\d+$) OR (commit_message =~ travis_dev)
+    if: (tag =~ ^v(\d+|\.)+[a-z]+\d*$) OR (commit_message =~ travis_dev)
   - name: build_dev_dockerfiles
-    if: (tag =~ ^v(\d+|\.)+[a-z]+\d+$) OR (commit_message =~ travis_dev)
+    if: (tag =~ ^v(\d+|\.)+[a-z]+\d*$) OR (commit_message =~ travis_dev)
 
   - name: website_release
     if: tag =~ ^v(\d+|\.)+[^a-z]\d+$ OR tag = website
