--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
+  - export PATH=/home/travis/miniconda2/bin:$PATH
   - conda update --yes conda
 
 install:
@@ -60,7 +60,7 @@ install:
   - pip install osfclient
   - sudo apt-get install graphviz
   - pip install ./GSForge
-  - conda env update --name py38_env --file ./doc/environment.yml --yes
+  - conda env update --name py38_env --file ./doc/environment.yml
 
 jobs:
   include:
