--- a/.travis.yml
+++ b/.travis.yml
@@ -40,25 +40,18 @@ stages:
 
 
 
-before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda2/bin:$PATH
-  - conda update --yes conda
+#before_install:
+#  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+#  - chmod +x miniconda.sh
+#  - ./miniconda.sh -b
+#  - export PATH=/home/travis/miniconda2/bin:$PATH
+#  - conda update --yes conda
 
 install:
-  - conda env create -f ./doc/environment.yml
-  - source activate Py38_GSForge
-
-  # Below, include the dependencies you want to install with conda, optionally
-  # specifying versions used in the matrix above. If you split this into
-  # multiple conda install commands, you should always include numpy=$NUMPY as
-  # the first package to install (for every conda install command) otherwise
-  # numpy may be automatically upgraded.
-
-  - pip install osfclient
+#  - conda env create -f ./doc/environment.yml
+#  - source activate Py38_GSForge
   - sudo apt-get install graphviz
+  - pip install osfclient
   - pip install .
 
 jobs:
