--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,12 @@ addons:
 env:
   - GSFORGE_DEMO_DATA="${HOME}/GSForge_demo_data"
 
-language: python
+python:
+  - "3.8"
 
 
 services:
   - docker
-
-
-matrix:
-  include:
-    - python: 3.8
 
 
 stages:
