another docker update, travis_dev

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,10 +1,10 @@
 FROM jupyter/datascience-notebook:latest
 
 
-COPY requirements.txt /tmp/
-RUN conda install --yes --file /tmp/requirements.txt && \
-    fix-permissions $CONDA_DIR && \
-    fix-permissions /home/$NB_USER
+#COPY requirements.txt /tmp/
+#RUN conda install --yes --file /tmp/requirements.txt && \
+#    fix-permissions $CONDA_DIR && \
+#    fix-permissions /home/$NB_USER
 
 RUN mkdir $HOME/gsforge
 COPY . $HOME/gsforge
