--- a/docker/workflow/Dockerfile
+++ b/docker/workflow/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8
 ENV GSFORGE_INSTALL_CORE=true
 
-RUN mkdir /opt/gsforge
-COPY . /opt/gsforge/
-RUN pip install /opt/gsforge/
+RUN mkdir $HOME/gsforge
+COPY . $HOME/gsforge
+RUN pip install --user $HOME/gsforge
