fixed missing -p in mkdir of dockerfile.

--- a/docker/workflow/Dockerfile
+++ b/docker/workflow/Dockerfile
@@ -4,6 +4,6 @@ ENV GSFORGE_INSTALL_CORE=true
 RUN groupadd -r gsf_user && useradd --no-log-init -r -g gsf_user gsf_user
 USER gsf_user
 
-RUN mkdir $HOME/gsforge
+RUN mkdir -p $HOME/gsforge
 COPY . $HOME/gsforge
 RUN pip install --user $HOME/gsforge
