docker test, travis_dev

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -9,7 +9,10 @@ FROM jupyter/datascience-notebook:latest
 RUN mkdir $HOME/gsforge
 COPY . $HOME/gsforge
 RUN pip install --user $HOME/gsforge&& \
-    fix-permissions $CONDA_DIR && \
-    fix-permissions /home/$NB_USER
+#    fix-permissions $CONDA_DIR && \
+#    fix-permissions /home/$NB_USER
 
 COPY ./examples $HOME/examples/
+
+# https://github.com/numba/numba/issues/4032
+RUN mkdir /tmp/numba_cache & chmod 777 /tmp/numba_cache & NUMBA_CACHE_DIR=/tmp/numba_cache
