docker fixed? travis_dev

--- a/docker/workflow/Dockerfile
+++ b/docker/workflow/Dockerfile
@@ -6,9 +6,9 @@ ENV GSFORGE_INSTALL_CORE=true
 #USER gsf_user
 
 
-RUN mkdir -p $HOME/gsforge
-COPY . $HOME/gsforge
-RUN pip install $HOME/gsforge/setup.py
+RUN mkdir /opt/gsforge
+COPY . /opt/gsforge/
+RUN pip install /opt/gsforge/
 
 # https://github.com/numba/numba/issues/4032
 RUN mkdir /tmp/numba_cache & chmod 777 /tmp/numba_cache & NUMBA_CACHE_DIR=/tmp/numba_cache
