more docker fixes, travis_dev

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,16 +1,9 @@
 FROM jupyter/datascience-notebook:latest
 
-
-#COPY requirements.txt /tmp/
-#RUN conda install --yes --file /tmp/requirements.txt && \
-#    fix-permissions $CONDA_DIR && \
-#    fix-permissions /home/$NB_USER
-
 RUN mkdir $HOME/gsforge
 COPY . $HOME/gsforge
-RUN pip install --user $HOME/gsforge&& \
-#    fix-permissions $CONDA_DIR && \
-#    fix-permissions /home/$NB_USER
+RUN pip install --user $HOME/gsforge
+
 
 COPY ./examples $HOME/examples/
 
