--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ jobs:
         - sudo apt-get install graphviz
         - pip install osfclient
         - pip install .[docs]
+        - ipython kernel install --name "gsfenv" --user
       script:
         - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
         - mkdir docs/source/API/
@@ -66,6 +67,7 @@ jobs:
         - sudo apt-get install graphviz
         - pip install osfclient
         - pip install .[docs]
+        - ipython kernel install --name "gsfenv" --user
       script:
         - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
         - mkdir docs/source/API/
