removed example copy from dockerfile, travis_dev

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -5,7 +5,7 @@ COPY . $HOME/gsforge
 RUN pip install --user $HOME/gsforge
 
 
-COPY ./examples $HOME/examples/
+#COPY ./examples $HOME/examples/
 
 # https://github.com/numba/numba/issues/4032
 RUN mkdir /tmp/numba_cache & chmod 777 /tmp/numba_cache & NUMBA_CACHE_DIR=/tmp/numba_cache
