added a .nojekyll for GH-pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,10 @@ jobs:
         - mkdir docs/source/API/
         - sphinx-apidoc --separate --force -o docs/source/API/ ./GSForge
         - python -m sphinx docs/source/ ../builtdocs/
+      before_deploy:
+        # Add .nojekyll file and redirect from docroot to the sphinx output dir
+        - touch ./builtdocs/.nojekyll
+#        - cp assets/gh-pages-redirect.html html/index.html
       deploy:
         - provider: pages
           skip_cleanup: true
