--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,9 @@ jobs:
         - mkdir docs/source/API/
         - sphinx-apidoc --separate --force -o docs/source/API/ ./GSForge
         - python -m sphinx docs/source/ ../builtdocs/
+      before_deploy:
+        # Add .nojekyll file and redirect from docroot to the sphinx output dir
+        - touch ./builtdocs/.nojekyll
       deploy:
         - provider: pages
           skip_cleanup: true
