--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ jobs:
         - python -m sphinx docs/source/ ../builtdocs/
       before_deploy:
         # Add .nojekyll file and redirect from docroot to the sphinx output dir
-        - touch ./builtdocs/.nojekyll
+        - touch ../builtdocs/.nojekyll
       deploy:
         - provider: pages
           skip_cleanup: true
@@ -78,7 +78,7 @@ jobs:
         - python -m sphinx docs/source/ ../builtdocs/
       before_deploy:
         # Add .nojekyll file and redirect from docroot to the sphinx output dir
-        - touch ./builtdocs/.nojekyll
+        - touch ../builtdocs/.nojekyll
       deploy:
         - provider: pages
           skip_cleanup: true
