--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ jobs:
       deploy:
         - provider: pages
           skip_cleanup: true
-          local_dir: ./builtdocs
+          local_dir: ../builtdocs
           target_branch: gh-pages
           github_token: $GITHUB_TOKEN
           on:
