doc updates, travis_dev

--- a/workflows/boruta_multiclass/nextflow.config
+++ b/workflows/boruta_multiclass/nextflow.config
@@ -23,7 +23,7 @@
 
 
 profiles {
-  standard { executor.queueSize = 1 }
+  // standard { executor.queueSize = 1 }
   docker { docker.enabled = true
            process.container = 'systemsgenetics/gsforge_workflow:latest' }
   singularity { singularity.enabled = true
