nf config profile added

--- a/workflows/boruta_multiclass/test.config
+++ b/workflows/boruta_multiclass/test.config
@@ -17,3 +17,11 @@ params.repeats = 2
 
 // Output directory.
 params.out_dir = "${GSFORGE_DEMO_DATA}/osfstorage/oryza_sativa/GeneSetCollections/nf_boruta"
+
+profiles {
+  kamiak {
+    process.executor = "slurm"
+    process.queue = "ficklin"
+    singularity.autoMounts = true
+  }
+}
