--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
       - libnetcdf-dev
 
 env:
-  - GSFORGE_DEMO_DATA="${HOME}/GSForge_demo_data"
+  - GSFORGE_DEMO_DATA="${HOME}/GSForge_demo_data/osfstorage/oryza_sativa"
 
 
 language: python
