--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.3'
 
 services:
-  documentation:
-    image: systemsgenetics/gsforge_documentation:${GSFORGE_IMAGE_TAG:-dev}
-    environment:
-      - GSFORGE_DEMO_DATA=/GSForge_demo_data
-    volumes:
-      - ${HOME}/GSForge_demo_data:/GSForge_demo_data
-    build:
-      context: .
-      dockerfile: './docker/documentation/Dockerfile'
+#  documentation:
+#    image: systemsgenetics/gsforge_documentation:${GSFORGE_IMAGE_TAG:-dev}
+#    environment:
+#      - GSFORGE_DEMO_DATA=/GSForge_demo_data
+#    volumes:
+#      - ${HOME}/GSForge_demo_data:/GSForge_demo_data
+#    build:
+#      context: .
+#      dockerfile: './docker/documentation/Dockerfile'
 
   interactive:
     image: systemsgenetics/gsforge_interactive:${GSFORGE_IMAGE_TAG:-dev}
